# herd

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DECK.md  Dockerfile  README.md  ROADMAP.md  SECURITY-REVIEW.md  dashboard.html  herd.yaml.example  skills.md
.github/workflows/: ci.yml  release.yml
docs/: LLAMA_CPP_BACKEND.md
docs/specs/: herd-tune-spec.md  scorer-open-questions.md  smart-routing-scorer-spec.md  v1-agent-teams-spec.md  v2-distributed-inference-spec.md
scripts/: herd-tune.ps1  herd-tune.sh
src/: analytics.rs  budget.rs  classifier.rs  classifier_auto.rs  cli.rs  config.rs  discovery.rs  lib.rs  main.rs  metrics.rs  model_homing.rs  profiles.rs  publish.rs  rate_limit.rs  server.rs  updater.rs
src/agent/: audit.rs  executor.rs  permissions.rs  store.rs  tools.rs  types.rs  ws.rs
src/api/: admin.rs  agent.rs  internal.rs  mod.rs  models.rs  nodes.rs  openai.rs  profiles.rs  status.rs
src/backend/: discovery.rs  health.rs  mod.rs  pool.rs  warmer.rs
src/daemon/: capabilities.rs  client.rs  lifecycle.rs  mod.rs  update.rs
src/middleware/: mod.rs
src/nodes/: binary_store.rs  db.rs  health.rs  mod.rs  pool_sync.rs  registry.rs  types.rs
src/providers/: anthropic.rs  cost_db.rs  mod.rs  openai_compat.rs  pricing.rs
src/router/: deployment.rs  least_busy.rs  mod.rs  model_aware.rs  priority.rs  routing_stats.rs  scored.rs  session_affinity.rs  weighted_round_robin.rs
tasks/: HERD-V1.1-SPEC.md  HERD-V1.2-SPRINT.md  lessons.md  pr3-pr4-decisions.md  todo.md
tests/: agent_daemon.rs  fleet_routing.rs  frontier_escalation.rs
(+3 files in other folders)
